# linkedinEngagment

./: .gitignore  CLIENT_SETUP.md  README.md  analytics_properties.json  extension_server.py  ga4_collector.py  linkedin_bot.py  linkedin_metrics.jsonl  linkedin_strategy.json  manage.py  pyproject.toml  reporting.py  requirements.txt  skipped_post_topics.txt
chrome_extension/: build_info.json  content.js  facebook_content.js  inbox_content.js  instagram_content.js  manifest.json  metrics_content.js  options.css  options.html  options.js  service_worker.js  settings.js  whatsapp_content.js
scripts/: build_client_package.ps1  daily_report.ps1  start_bridge.ps1
tests/: test_maintenance.py
