[project]
name = "linkedin-engagement-copilot"
version = "3.18.5"
description = "Local Ollama-powered, observable LinkedIn engagement copilot"
requires-python = ">=3.11"
dependencies = [
  "playwright==1.61.0",
  "requests==2.32.4",
  "python-dotenv==1.1.1",
  "google-analytics-data==0.23.0",
]

[project.optional-dependencies]
package = ["pyinstaller==6.21.0"]

[tool.ruff]
line-length = 100
